--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "eslint-webpack-plugin": "^4.2.0",
+    "html-minifier-terser": "^7.2.0",
     "html-webpack-plugin": "^5.6.3"
   }
 }
